<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical"
android:padding="30dip"
tools:context=".Asteroides" 
android:background="@drawable/degradado">

   

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carlos Lisarde Ortiz" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dip"
      android:gravity="center"
      android:text="@string/tituloAplicacion"
      android:textSize="25sp " />

  <Button android:id="@+id/Button01"

      android:layout_height="wrap_content"

      android:layout_width="match_parent"

      android:text="@string/Arrancar"/>

  <Button android:id="@+id/Button02"

      android:layout_height="wrap_content"

      android:layout_width="match_parent"

      android:text="@string/Configurar"/>

  <Button
      android:id="@+id/Button03"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="lanzarAcercaDe"
      android:text="@string/Acercade" />

  <Button
      android:id="@+id/Button04"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="salir"
      android:text="@string/Salir" />

  </LinearLayout>